--- a/wp-content/themes/astra-child/style.css
+++ b/wp-content/themes/astra-child/style.css
@@ -19,7 +19,7 @@ Template: astra
 	border-radius: 5px;
 	background-color: #E0B9B4;
 }
-#menu-item-35:hover {
+#menu-item-35:hover, .admin-gras:hover {
 	font-weight: 700;
 }
 #menu-item-34:hover, .form-commande .bouton-commande:hover, .mon-form .first-button input:hover {
@@ -52,13 +52,8 @@ Template: astra
 .selecteur {
 	font-family: Inter;
 	display: flex;
-	justify-content: start;
-	border-radius: 5px;
-	width: 82px;
-	height: 56px;
-	background-color: #FFFFFF;
 }
-.selecteur p {
+.select-operateur .fond-rose {
 	margin: 0px;
 }
 .select-operateur {
@@ -67,13 +62,9 @@ Template: astra
 	justify-content: center;
 	width: 31px;
 	height: 56px;
-}
-.select-zero {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 51px;
-	height: 56px;
+	position: absolute;
+	right: 14%;
+	pointer-events: none;
 }
 .select-plus {
 	border-radius: 0 5px 0 0;
@@ -89,6 +80,42 @@ Template: astra
 	background-color: #DC9F96;
 	color: #FFFFFF;
 	height: 28px;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button
+{
+  -webkit-appearance: none;
+  margin: 0;
+  width: 31px;
+	height: 56px;
+	margin-right: -14px;
+}
+
+input[type=number]
+{
+  -moz-appearance: textfield;
+  padding-left: 20px;
+  border: 0px;
+  outline: none;
+  font-family: Inter;
+	border-radius: 5px;
+	width: 82px;
+	height: 56px;
+}
+
+@media (max-width: 768.01px) {
+    .select-operateur {
+		position: absolute;
+		right: 4%;
+		pointer-events: none;
+	}
+}
+@media (max-width: 767.98px) {
+    .select-operateur {
+		position: relative;
+		right: 25px;
+		pointer-events: none;
+	}
 }
 
 @media (max-width: 800.01px) {
